# FluxDM

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/engine/: Cargo.toml
crates/engine/src/: chunked.rs  http.rs  lib.rs
crates/engine/tests/: chunked_integration.rs  http_integration.rs
crates/ui/: Cargo.toml
crates/ui/src/: main.rs
crates/ui/ui/: main.slint
tests/: http_integration.rs
